--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.2.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
+    "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
