--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-infinite-scroller": "^1.2.6",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
+    "react-scroll-component": "^0.6.7",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0"
   },
