--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.4",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-infinite-scroller": "^1.2.6",
