--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-fast-marquee": "^1.6.4",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "^1.2.6",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
